2020-04-29

- Set Normalized equation with Dynamic Orstein-Uhlenbbeck named (sdeScheme == "OrsteinTimeN"). 
- Define  mean velocity at every timeStep ($<V> = \int_{0}^{L} U*(1-U) dx$) with Dynamic Orstein-Uhlenbbeck named (sdeScheme == "OrsteinTimeM"). 

2020-04-22

- Add Dynamic White Noise field.

2020-04-18

- Fix dynamic OU process according the new recommedations. Dispersion of the system equals  SQRT(\tau * \theta).

- Refuse the velocity shifting to set Mean Value to Zero. This operation was used for stochastic field by space only. 

- Add the IO infomation of theta, tau, barVel and SDE_Scheme

2020-04-14

Set dynamical stochastic fields, which changing during the time. 

- OrsteinTime -- generate 2D Orstein-Uhlenbeck stochastic field by scheme [Krasheninnikov]. It considers exponentional delay by time  and space
- WhiteNoiseTime -- generate new white noise field at every timestep.

2020-04-10

Add option `sdeScheme` to choose the Stochastic field. Now there are two options:

- Ornstein  -- generate Ornstein-Uhlenbeck stochastic field
- WhiteNoise -- generate White noise velocity field

Currently both gen method work in one-D X-space. 

By Default set Stochastic field Orstein-Uhlenbeck along the X-space as an initial conditions
It works with the old version of cases. If the variable "sdeScheme" isn't set in transportProperties,
then the program uses the O-U process. 



В уравнение со сверткой myKppOUNeFoam Добавили код с выделением среднего значения винеровского процесса в области пламени. Проверяли возможность применения такого преобразования для упрощения решения при больших амплитудах. Сейчас код закомментирован. 

2020-03-16

Добавлил систему для экспоненциального белого шума (Процесс Орнштейна-Уленбека). В модели найдена ошибка, которую раньше не замечали . случайную величину ненужно умножать на sqrt(dx). Это никак не проверить на уже сгенерированном поле. Не влияет на корреляционную функцию. Значение можно вынести в значение амплитуды \delta.
